--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1363,7 +1363,7 @@ main {
     color: var(--primary-color);
     margin-bottom: 4px;
     line-height: 1.3;
-    padding-right: 60px;
+    padding-right: 0;
 }
 
 .publication-item .authors {
@@ -1383,7 +1383,7 @@ main {
     flex-wrap: wrap;
     gap: 8px;
     margin-top: 5px;
-    padding-right: 80px;
+    padding-right: 53.33px;
     padding-bottom: 4px;
 }
 
@@ -2162,7 +2162,7 @@ main {
     }
 
     .publication-links {
-        padding-right: 70px;
+        padding-right: 46.67px;
         padding-bottom: 10px;
     }
 
